welcome.lessons.welcome.array.array667.Array667.scala.error
array667:7: error: not found: value l
    deu=nums(l-1)
             ^array667:5: error: type mismatch;
 found   : Unit
 required: Int
  for (compteur <- 1 to nums.length-1){
                ^